--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <title></title>
 </head>
 <body>
-<div class="example J_ExampleIdForJs" id="exampleIdForJs" data-alias="example"></div>
+<div id="app"></div>
 </body>
 </html>
